fix: testimonial carousel slide spacings

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -1,12 +1,19 @@
 /* Carousel block styles */
 
 /** Carousel section styling */
-.carousel-container {
+.section.carousel-container {
     background: var(--neutral-bone);
     padding: var(--spacer-layout-06) 0 var(--spacer-layout-06);
 }
 
-.section.carousel-
+.section.carousel-container .default-content-wrapper {
+    padding-top: var(--spacer-layout-04);
+    padding-bottom: 0;
+}
+
+.section.carousel-container p.button-container {
+    margin: 0 auto;
+}
 
 .carousel {
     position: relative;
@@ -20,6 +27,15 @@
     justify-content: center;
     margin: 0 auto;
     text-align: center;
+}
+
+main .section div.carousel-wrapper {
+    padding: 0;
+}
+
+.carousel .carousel-slide h3 {
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .carousel .carousel-slide-container {
@@ -36,6 +52,38 @@
     height: 100%;
     position: absolute;
     transition: all 0.5s;
+}
+
+.carousel .carousel-nav {
+    opacity: 0;
+    z-index: 2;
+    top: 54px;
+    height: 54px;
+    width: 54px;
+    position: absolute;
+    transition: 0.5s;
+    cursor: pointer;
+    background: url('../../icons/testimonial.svg');
+}
+
+.carousel.image-carousel-full-width .figure,
+.carousel.image-carousel-full-width .carousel-nav,
+.carousel.image-carousel-full-width .carousel-dots {
+    display: none;
+}
+
+.carousel .carousel-slide div .figure {
+    align-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+    gap: var(--spacer-layout-01);
+    justify-content: space-between;
+    margin: var(--spacer-layout-02) auto 0;
+    width: fit-content;
+}
+
+.carousel.testimonial .carousel-slide div .figure {
+    flex-direction: column;
 }
 
 .carousel .carousel-slide > div {
@@ -61,17 +109,6 @@
 }
 
 /* Carousel Navigation */
-.carousel .carousel-nav {
-    opacity: 0;
-    z-index: 2;
-    top: 125px;
-    height: 54px;
-    width: 54px;
-    position: absolute;
-    transition: 0.5s;
-    cursor: pointer;
-    background: url('../../icons/testimonial.svg');
-}
 
 .carousel .carousel-nav:hover {
     background: url('../../icons/testimonial-hover.svg');
@@ -111,28 +148,8 @@
     flex-wrap: nowrap;
 }
 
-.carousel.image-carousel-full-width .figure,
-.carousel.image-carousel-full-width .carousel-nav,
-.carousel.image-carousel-full-width .carousel-dots {
-    display: none;
-}
-
-.carousel .carousel-slide div .figure {
-    align-content: center;
-    align-items: center;
-    flex-flow: column nowrap;
-    gap: var(--spacer-layout-01);
-    justify-content: space-between;
-    margin: var(--spacer-layout-02) auto 0;
-    width: fit-content;
-}
-
-.carousel.testimonial .carousel-slide div .figure {
-    flex-direction: row;
-}
-
 .carousel .carousel-slide .figure p {
-    text-align: left;
+    text-align: center;
     margin: 0;
 }
 
@@ -149,6 +166,7 @@
     align-items: center;
     justify-content: center;
     list-style: none;
+    padding-inline-start: 0;
 }
 
 .carousel .carousel-dots li {
@@ -180,18 +198,13 @@
     padding: var(--spacer-layout-06) 0 var(--spacer-layout-06);
 }
 
-.carousel {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    order: 1;
-    display: flex;
-    flex-flow: row wrap;
-    align-content: flex-start;
-    align-items: flex-start;
-    justify-content: center;
-    margin: 0 auto;
-    text-align: center;
+main .section div.carousel-wrapper {
+    padding-top: var(--spacer-layout-05);
+    padding-bottom: var(--spacer-layout-04);
+}
+
+.section.carousel-container .default-content-wrapper {
+    padding-bottom: var(--spacer-layout-05);
 }
 
 .carousel .carousel-slide-container {
@@ -210,38 +223,17 @@
     transition: all 0.5s;
 }
 
-    .carousel .carousel-slide h3 {
-        /* font-size: var(--font-size-24); */
-        margin-bottom: 0;
-        margin-top: 0;
-    }
-
-.carousel .carousel-slide > div {
-    flex-direction: column;
-    font-family: var(--serif-font);
-    font-weight: var(--font-weight-light);
-    line-height: var(--line-height-120);
-    letter-spacing: var(--letter-spacing-1-75);
-    font-size: var(--font-size-28);
-}
-
-/* Testimonial */
-.carousel.testimonial p {
-    margin-left: 1em;
-    font-size: var(--font-size-16);
-    font-family: var(--sans-serif-font-regular);
-    letter-spacing: var(--letter-spacing-1);
-}
-
 .carousel .carousel-slide div {
     display: flex;
     flex-direction: column;
+    font-family: var(--serif-font);
+    font-weight: var(--font-weight-light);
+    line-height: 124%;
+    font-size: 31px;
 }
 
-    .carousel:hover .carousel-nav {
-        opacity: 1;
-    }
 
+    /* Testimonial */
     .carousel .carousel-slide .figure {
         flex-flow: row nowrap;
         gap: var(--spacer-layout-02);
@@ -250,6 +242,21 @@
     .carousel.testimonial .carousel-slide .figure {
         display: inline-flex;
         flex-direction: row;
+    }
+
+    .carousel.testimonial .carousel-slide div .figure {
+        flex-direction: row;
+    }
+
+.carousel.testimonial p {
+    margin-left: 1em;
+    font-size: var(--font-size-16);
+    font-family: var(--sans-serif-font-regular);
+    letter-spacing: var(--letter-spacing-1);
+}
+
+    .carousel:hover .carousel-nav {
+        opacity: 1;
     }
     
     .carousel .carousel-slide .figure p {
